// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FLPModal /> > renders by default as expected 1`] = `
<body
  data-zag-scroll-lock=""
  style="overflow: hidden; padding-right: 1024px;"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="dialog::r0::content"
      aria-expanded="true"
      aria-haspopup="dialog"
      aria-hidden="true"
      class="chakra-button css-4xx2wk"
      data-part="trigger"
      data-scope="dialog"
      id="dialog::r0::trigger"
      type="button"
    >
      Trigger
    </button>
  </div>
  <div
    class="chakra-portal"
  >
    <div
      aria-hidden="true"
      class="chakra-modal__overlay css-13d1tkw"
      data-aria-hidden="true"
      data-part="backdrop"
      data-scope="dialog"
      id="dialog::r0::backdrop"
      style="opacity: 0.49157750254380517;"
    />
    <div
      class="css-0"
      data-part="container"
      data-scope="dialog"
      id="dialog::r0::container"
    >
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <div
          class="chakra-modal__content-container css-1oxhx2p"
          tabindex="-1"
        >
          <section
            aria-describedby="chakra-modal--body-:r2:"
            aria-labelledby="chakra-modal--header-:r2:"
            aria-modal="true"
            class="chakra-modal__content css-6yiygt"
            data-part="content"
            data-scope="dialog"
            id="chakra-modal-:r2:"
            role="dialog"
            style="opacity: 0.49157750254380517; transform: scale(0.9745788751271902) translateZ(0);"
            tabindex="-1"
          >
            <header
              class="chakra-modal__header css-72fd9l"
              data-part="title"
              data-scope="dialog"
              id="dialog::r0::title"
            >
              Modal Title
            </header>
            <button
              aria-label="Close"
              class="chakra-modal__close-btn css-6sdaxy"
              data-part="close-trigger"
              data-scope="dialog"
              id="dialog::r0::close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon css-onkibi"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <div
              class="chakra-modal__body css-0"
              data-part="description"
              data-scope="dialog"
              id="dialog::r0::description"
            >
              <div>
                Modal Content
              </div>
            </div>
            <footer
              class="chakra-modal__footer css-192qrng"
            >
              <div
                class="chakra-button__group css-1ind3v2"
                data-orientation="horizontal"
                role="group"
              >
                <button
                  class="chakra-button css-1fysbuj"
                  data-part="close-trigger"
                  data-scope="dialog"
                  id="dialog::r0::close"
                  type="button"
                >
                  close
                </button>
                <button
                  class="chakra-button css-1fysbuj"
                  id="pressable::r6:"
                  type="button"
                >
                  Confirm
                </button>
              </div>
            </footer>
          </section>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`<FLPModal /> > renders by default as expected 2`] = `
<body
  data-zag-scroll-lock=""
  style="overflow: hidden; padding-right: 1024px;"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="dialog::r0::content"
      aria-expanded="true"
      aria-haspopup="dialog"
      aria-hidden="true"
      class="chakra-button css-4xx2wk"
      data-part="trigger"
      data-scope="dialog"
      id="dialog::r0::trigger"
      type="button"
    >
      Trigger
    </button>
  </div>
  <div
    class="chakra-portal"
  >
    <div
      aria-hidden="true"
      class="chakra-modal__overlay css-13d1tkw"
      data-aria-hidden="true"
      data-part="backdrop"
      data-scope="dialog"
      id="dialog::r0::backdrop"
      style="opacity: 0.8283781849022489;"
    />
    <div
      class="css-0"
      data-part="container"
      data-scope="dialog"
      id="dialog::r0::container"
    >
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <div
          class="chakra-modal__content-container css-1oxhx2p"
          tabindex="-1"
        >
          <section
            aria-describedby="chakra-modal--body-:r2:"
            aria-labelledby="chakra-modal--header-:r2:"
            aria-modal="true"
            class="chakra-modal__content css-6yiygt"
            data-part="content"
            data-scope="dialog"
            id="chakra-modal-:r2:"
            role="dialog"
            style="opacity: 0.8283781849022489; transform: scale(0.9914189092451124) translateZ(0);"
            tabindex="-1"
          >
            <header
              class="chakra-modal__header css-72fd9l"
              data-part="title"
              data-scope="dialog"
              id="dialog::r0::title"
            >
              Modal Title
            </header>
            <button
              aria-label="Close"
              class="chakra-modal__close-btn css-6sdaxy"
              data-part="close-trigger"
              data-scope="dialog"
              id="dialog::r0::close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon css-onkibi"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <div
              class="chakra-modal__body css-0"
              data-part="description"
              data-scope="dialog"
              id="dialog::r0::description"
            >
              <div>
                Modal Content
              </div>
            </div>
            <footer
              class="chakra-modal__footer css-192qrng"
            >
              <div
                class="chakra-button__group css-1ind3v2"
                data-orientation="horizontal"
                role="group"
              >
                <button
                  class="chakra-button css-1fysbuj"
                  data-part="close-trigger"
                  data-scope="dialog"
                  id="dialog::r0::close"
                  type="button"
                >
                  close
                </button>
                <button
                  class="chakra-button css-1fysbuj"
                  id="pressable::r6:"
                  type="button"
                >
                  Confirm
                </button>
              </div>
            </footer>
          </section>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
